todas as telas juntas agr

--- a/src/CangUp/app.json
+++ b/src/CangUp/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "TelasYasmin",
-    "slug": "TelasYasmin",
+    "name": "CangUp",
+    "slug": "CangUp",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
