--- a/src/CangUp/package.json
+++ b/src/CangUp/package.json
@@ -9,11 +9,17 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/metro-runtime": "~5.0.4",
+    "@react-native-picker/picker": "2.11.0",
+    "@react-navigation/native-stack": "^7.3.13",
     "expo": "~53.0.9",
+    "expo-font": "~13.3.1",
     "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
+    "react-dom": "19.0.0",
     "react-native": "0.79.2",
-    "react-native-maps": "^1.23.8"
+    "react-native-maps": "^1.23.8",
+    "react-native-web": "^0.20.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
