--- a/src/CangUp/package.json
+++ b/src/CangUp/package.json
@@ -18,6 +18,7 @@
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.2",
+    "react-native-elements": "^3.4.3",
     "react-native-maps": "^1.23.8",
     "react-native-web": "^0.20.0"
   },
