--- a/src/CangUp/package.json
+++ b/src/CangUp/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "~5.0.4",
-    "@react-native-picker/picker": "2.11.0",
+    "@react-native-picker/picker": "^2.11.0",
     "@react-navigation/native-stack": "^7.3.13",
     "expo": "~53.0.9",
     "expo-font": "~13.3.1",
