--- a/src/CangUp/package.json
+++ b/src/CangUp/package.json
@@ -10,8 +10,8 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "~5.0.4",
-    "@react-native-picker/picker": "^2.11.0",
-    "@react-navigation/native-stack": "^7.3.13",
+    "@react-native-picker/picker": "2.11.0",
+    "@react-navigation/native-stack": "^7.3.14",
     "expo": "~53.0.9",
     "expo-font": "~13.3.1",
     "expo-status-bar": "~2.2.3",
