--- a/src/CangUp/package.json
+++ b/src/CangUp/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "~5.0.4",
+    "@react-native-async-storage/async-storage": "2.1.2",
     "@react-native-picker/picker": "2.11.0",
     "@react-navigation/native-stack": "^7.3.14",
     "expo": "~53.0.9",
     "expo-font": "~13.3.1",
+    "expo-location": "~18.1.5",
     "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
     "react-dom": "19.0.0",
