--- a/src/CangUp/package.json
+++ b/src/CangUp/package.json
@@ -22,6 +22,7 @@
     "react-native": "0.79.2",
     "react-native-elements": "^3.4.3",
     "react-native-maps": "^1.23.8",
+    "react-native-vector-icons": "^10.3.0",
     "react-native-web": "^0.20.0"
   },
   "devDependencies": {
