--- a/src/CangUp/package.json
+++ b/src/CangUp/package.json
@@ -16,6 +16,7 @@
     "expo": "~53.0.9",
     "expo-font": "~13.3.2",
     "expo-location": "~18.1.5",
+    "expo-sqlite": "~15.2.14",
     "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
     "react-dom": "19.0.0",
@@ -25,8 +26,7 @@
     "react-native-masked-text": "^1.13.0",
     "react-native-safe-area-context": "^5.5.2",
     "react-native-vector-icons": "^10.3.0",
-    "react-native-web": "^0.20.0",
-    "expo-sqlite": "~15.2.14"
+    "react-native-web": "^0.20.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
