--- a/src/CangUp/package.json
+++ b/src/CangUp/package.json
@@ -13,7 +13,7 @@
     "@react-native-async-storage/async-storage": "2.1.2",
     "@react-native-picker/picker": "2.11.1",
     "@react-navigation/native-stack": "^7.3.25",
-    "expo": "~53.0.9",
+    "expo": "53.0.20",
     "expo-font": "~13.3.2",
     "expo-location": "~18.1.5",
     "expo-sqlite": "~15.2.14",
