--- a/src/CangUp/package.json
+++ b/src/CangUp/package.json
@@ -13,7 +13,8 @@
     "@react-native-async-storage/async-storage": "2.1.2",
     "@react-native-picker/picker": "2.11.1",
     "@react-navigation/native-stack": "^7.3.25",
-    "expo": "53.0.20",
+    "datetimepicker": "^0.1.39",
+    "expo": "^53.0.20",
     "expo-font": "~13.3.2",
     "expo-location": "~18.1.5",
     "expo-sqlite": "~15.2.14",
@@ -26,7 +27,8 @@
     "react-native-masked-text": "^1.12.5",
     "react-native-safe-area-context": "^5.5.2",
     "react-native-vector-icons": "^10.3.0",
-    "react-native-web": "^0.20.0"
+    "react-native-web": "^0.20.0",
+    "@react-native-community/datetimepicker": "8.4.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
