--- a/src/CangUp/package.json
+++ b/src/CangUp/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@expo/metro-runtime": "~5.0.4",
     "@react-native-async-storage/async-storage": "2.1.2",
+    "@react-native-community/datetimepicker": "8.4.1",
     "@react-native-picker/picker": "2.11.1",
     "@react-navigation/native-stack": "^7.3.25",
     "datetimepicker": "^0.1.39",
@@ -24,11 +25,10 @@
     "react-native": "0.79.2",
     "react-native-elements": "^3.4.3",
     "react-native-maps": "^1.23.8",
-    "react-native-masked-text": "^1.12.5",
+    "react-native-masked-text": "^1.13.0",
     "react-native-safe-area-context": "^5.5.2",
     "react-native-vector-icons": "^10.3.0",
-    "react-native-web": "^0.20.0",
-    "@react-native-community/datetimepicker": "8.4.1"
+    "react-native-web": "^0.20.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
