--- a/src/CangUp/package.json
+++ b/src/CangUp/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@expo/metro-runtime": "~5.0.4",
     "@react-native-async-storage/async-storage": "2.1.2",
-    "@react-native-community/datetimepicker": "github:react-native-community/datetimepicker",
+    "@react-native-community/datetimepicker": "8.4.1",
     "@react-native-picker/picker": "2.11.1",
     "@react-navigation/native-stack": "^7.3.25",
     "datetimepicker": "^0.1.39",
