--- a/src/CangUp/package.json
+++ b/src/CangUp/package.json
@@ -10,13 +10,14 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "~5.0.4",
-    "@react-native-async-storage/async-storage": "2.1.2",
-    "@react-native-community/datetimepicker": "8.4.1",
-    "@react-native-picker/picker": "2.11.1",
+    "@react-native-async-storage/async-storage": "^2.1.2",
+    "@react-native-community/datetimepicker": "^8.4.1",
+    "@react-native-picker/picker": "^2.11.1",
     "@react-navigation/native-stack": "^7.3.26",
     "datetimepicker": "^0.1.39",
     "expo": "^53.0.20",
     "expo-font": "~13.3.2",
+    "expo-image-picker": "~16.1.4",
     "expo-location": "~18.1.5",
     "expo-sqlite": "~15.2.14",
     "expo-status-bar": "~2.2.3",
@@ -28,8 +29,7 @@
     "react-native-masked-text": "^1.13.0",
     "react-native-safe-area-context": "^5.5.2",
     "react-native-vector-icons": "^10.3.0",
-    "react-native-web": "^0.20.0",
-    "expo-image-picker": "~16.1.4"
+    "react-native-web": "^0.20.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
