--- a/src/CangUp/package.json
+++ b/src/CangUp/package.json
@@ -10,8 +10,8 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "~5.0.4",
-    "@react-native-async-storage/async-storage": "^2.1.2",
-    "@react-native-community/datetimepicker": "^8.4.1",
+    "@react-native-async-storage/async-storage": "2.1.2",
+    "@react-native-community/datetimepicker": "8.4.1",
     "@react-native-picker/picker": "^2.11.1",
     "@react-navigation/native-stack": "^7.3.26",
     "datetimepicker": "^0.1.39",
