--- a/src/CangUp/package.json
+++ b/src/CangUp/package.json
@@ -12,8 +12,8 @@
     "@expo/metro-runtime": "~5.0.4",
     "@react-native-async-storage/async-storage": "2.1.2",
     "@react-native-community/datetimepicker": "8.4.1",
-    "@react-native-picker/picker": "^2.11.1",
-    "@react-navigation/native-stack": "^7.3.26",
+    "@react-native-picker/picker": "2.11.1",
+    "@react-navigation/native-stack": "^7.3.27",
     "datetimepicker": "^0.1.39",
     "expo": "^53.0.20",
     "expo-font": "~13.3.2",
