alterações no front mobile

--- a/src/CangUp-back/.env
+++ b/src/CangUp-back/.env
@@ -1,19 +1,19 @@
-APP_NAME=Laravel
-APP_ENV=local
+APP_NAME=CangUp!
+APP_ENV=production
 APP_KEY=base64:ZfU3Y94j+otQyO0Ke5kM+5DwvwEH7QxfVGzCM8Y1Ak4=
 APP_DEBUG=true
-APP_URL=http://localhost:8000
+APP_URL=eq1.ini3a.projetoscti.com.br
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=pgsql
-DB_HOST=127.0.0.1
-DB_PORT=5432
-DB_DATABASE=tcc
-DB_USERNAME=postgres
-DB_PASSWORD=postgres
+DB_HOST=projetoscti.com.br
+DB_PORT=54432
+DB_DATABASE=eq1.ini3a
+DB_USERNAME=eq1.ini3a
+DB_PASSWORD=eq32a885
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
