--- a/src/CangUp/package.json
+++ b/src/CangUp/package.json
@@ -9,32 +9,34 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/metro-runtime": "~5.0.4",
-    "@react-native-async-storage/async-storage": "2.1.2",
-    "@react-native-community/datetimepicker": "8.4.1",
+    "@expo/metro-runtime": "~6.1.2",
+    "@react-native-async-storage/async-storage": "2.2.0",
+    "@react-native-community/datetimepicker": "8.4.4",
     "@react-native-picker/picker": "2.11.1",
     "@react-navigation/native-stack": "^7.3.27",
     "datetimepicker": "^0.1.39",
-    "expo": "^53.0.20",
-    "expo-font": "~13.3.2",
-    "expo-image-picker": "~16.1.4",
-    "expo-location": "~18.1.5",
-    "expo-sqlite": "~15.2.14",
-    "expo-status-bar": "~2.2.3",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
-    "react-native": "0.79.2",
+    "expo": "^54.0.13",
+    "expo-constants": "~18.0.9",
+    "expo-font": "~14.0.9",
+    "expo-image-picker": "~17.0.8",
+    "expo-linking": "~8.0.8",
+    "expo-location": "~19.0.7",
+    "expo-sqlite": "~16.0.8",
+    "expo-status-bar": "~3.0.8",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
+    "react-native": "0.81.4",
     "react-native-elements": "^3.4.3",
-    "react-native-maps": "^1.23.8",
+    "react-native-maps": "1.20.1",
     "react-native-masked-text": "^1.13.0",
-    "react-native-safe-area-context": "^5.5.2",
+    "react-native-safe-area-context": "~5.6.0",
     "react-native-vector-icons": "^10.3.0",
-    "react-native-web": "^0.20.0"
+    "react-native-web": "^0.21.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
-    "@types/react": "~19.0.10",
-    "typescript": "~5.8.3"
+    "@types/react": "^19.1.10",
+    "typescript": "^5.9.2"
   },
   "private": true
 }
